<?xml version="1.0" encoding="utf-8"?>
<FrameLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    tools:context=".PostingFragment"
    android:layout_marginTop="50dp"
    android:layout_marginBottom="50dp">

    <androidx.constraintlayout.widget.ConstraintLayout
        android:layout_width="match_parent"
        android:layout_height="50dp"
        android:visibility="gone">

        <TextView
            android:id="@+id/textView3"
            android:layout_width="113dp"
            android:layout_height="32dp"
            android:layout_marginTop="8dp"
            android:text="TextView"
            app:layout_constraintTop_toTopOf="parent"
            tools:layout_editor_absoluteX="16dp" />

    </androidx.constraintlayout.widget.ConstraintLayout>

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="445dp"
        android:orientation="vertical"
        android:visibility="gone">

        <ScrollView
            android:layout_width="match_parent"
            android:layout_height="match_parent">

            <LinearLayout
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:orientation="vertical" />
        </ScrollView>

        <TextView
            android:id="@+id/textView6"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:text="TextView" />
    </LinearLayout>

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        android:orientation="vertical"
        android:visibility="visible">

        <EditText
            android:id="@+id/et_title"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:hint="@string/et_title" />

        <EditText
            android:id="@+id/et_posting"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:ems="10"
            android:gravity="start|top"
            android:hint="@string/et_posting"
            android:inputType="textMultiLine"
            android:isScrollContainer="true"
            android:maxHeight="400dp"
            android:minHeight="200dp" />
        <!--    얘는 위치만 잡아볼라고 넣은것 - 여기에 게시물 작성하는 레이아웃 만들어야함-->

        <ImageButton
            android:id="@+id/ib_add_photo"
            android:layout_width="120dp"
            android:layout_height="120dp"
            android:src="@android:drawable/ic_menu_camera" />

        <LinearLayout
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_gravity="end|bottom"
            android:layout_marginBottom="50dp">

            <Button
                android:id="@+id/btn_cancel"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:text="@string/btn_cancel" />

            <Button
                android:id="@+id/btn_apply"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:text="@string/btn_apply" />
        </LinearLayout>
    </LinearLayout>
</FrameLayout>